--- a/index.html
+++ b/index.html
@@ -33,26 +33,23 @@
     <section id="main_content">
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="false"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-      <div id="app"></div>
-      <script>
-        var template = Handlebars.compile('<div>Hello {{name}}</div>');
-        var appEl = document.getElementById('app');
-        appEl.innerHTML = template({ name: 'Handlebars' });
+      <script id="example-template" type="text/x-handlebars-template">
+        <!-- people is loked up on the global context, the one we pas to the compiled template -->
+
+        {{#each people}}
+
+        <!--here the context is each indivual person. So we can access its properites directly-->
+        <p>{{firstName}} {{lastName}}</p>
+
+        {{/each}}
+
       </script>
 
-      <script id="expression-template" type="text/x-handlebars-template">
-      {{description.escaped}}
-      {{example}}
-      
-      <br><br>
-      
-      {{description.unescaped}}
-      {{{example}}}      
-      </script>
+
       <!--content is displayed here-->
       <div class="content-placeholder"></div>
     </section>
-  </div>  
+  </div>
 </body>
 
 </html>
