--- a/index.html
+++ b/index.html
@@ -33,21 +33,24 @@
     <section id="main_content">
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="false"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-      <script id="example-template" type="text/x-handlebars-template">
-        <!-- people is loked up on the global context, the one we pas to the compiled template -->
+      <script id="built-in-helpers-template" type="text/x-handlebars-template">  
 
-        {{#each people}}
-
-        <!--here the context is each indivual person. So we can access its properites directly-->
-        <p>{{firstName}} {{lastName}}</p>
-
+        {{#each animals}}        
+        <p>
+          The {{capitalize this.name}} says 
+          {{#if this.says}} 
+            "{{this.says}}". 
+            {{else}}
+              nothing since its a {{this.name}}. 
+            {{/if}}
+        </p>
         {{/each}}
 
       </script>
 
-
       <!--content is displayed here-->
       <div class="content-placeholder"></div>
+      
     </section>
   </div>
 </body>
