--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
 
   <title>Handlebars-basic by theWhiteFox</title>
-  <script src="bower_components/handlebars/handlebars.js"></script>
+  <script src="bower_components/handlebars/handlebars.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="templates/languages.tpl.js"></script>
   <script src="javascripts/scripty.js"></script>
