--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <title>Handlebars-basic by theWhiteFox</title>
   <script src="bower_components/handlebars/handlebars.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="templates/languages.tpl.js"></script>
   <script src="javascripts/scripty.js"></script>
 </head>
 
@@ -28,6 +27,7 @@
         <a href="https://github.com/theWhiteFox/Handlebars-basic" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
       </section>
     </div>
+
   </header>
 
   <div class="container">
@@ -35,35 +35,17 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="false"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-      <script id="block-expressions-template" type="text/x-handlebars-template">
-
-        <p>The <b> {{#uppercase}} konami {{/uppercase}} </b> Code is a cheat that appears in many video games. </p>
-
-        <p>During the title screen before the game demo begins, the player could press the following sequence of buttons on
-          the game controller to enable the cheat: </p>
-
-        <p>{{#uppercase}}{{code}}{{/uppercase}}</p>
-
-        <p>The code is also present as an Easter egg on a number of websites.</p>
-
+      <script id="header-tpl" type="text/x-handlebars-template">
+        {{#each customers}}
+        <li>{{firstName}} {{lastName}}</li>
+        {{/each}}
+        
+        {{#customers}}
+        <li>{{firstName}} {{lastName}} {{age}}</li>
+        {{/customers}}
       </script>
 
-      <!--<script id="myTemplate" type="text/x-handlebars-template">
-        <h1>{{title}}</h1>
-        <ul>
-          {{#names}}
-          <li>{{name}}</li>
-          {{/names}}
-        </ul>
-      </script>-->
-
-      <!--content is displayed here-->
-      <!--<div class="content-placeholder"></div>
-
-      <div class="content-placeholder-two"></div>-->
-
-      <div id="languages">
-      </div>
+      <div id="customers"></div>
 
     </section>
 
